--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,14 +12,22 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - name: Build and push Docker
-      uses: docker/build-push-action@v1.1.0
+#    - name: Build and push Docker
+#      uses: docker/build-push-action@v1.1.0
+#      with:
+#        registry: ghcr.io
+#        username: ${{ secrets.DOCKER_USERNAME }}
+#        password: ${{ secrets.DOCKER_PASSWORD }}
+#        repository: mlesniak/markdown
+#        tags: latest
+
+    - name: ls -a via ssh
+      uses: garygrossgarten/github-action-ssh@release
       with:
-        registry: ghcr.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: mlesniak/markdown
-        tags: latest
+        command: ls -a
+        host: mlesniak.com
+        username: ${{ secrets.USERNAME}}
+        privateKey: ${{ secrets.PRIVATE_KEY}}
 
 
 #    - name: Set up Go 1.x
